# NcatBot

./: .gitignore  CONTRIBUTING.md  README.md  config.yaml  main.py  pyproject.toml  release-notes.md  requirements.txt  setup.py  tox.ini
.agents/skills/code-nav/: SKILL.md
.agents/skills/codebase-nav/: SKILL.md
.agents/skills/consistency-check/: SKILL.md
.agents/skills/doc-nav/: SKILL.md
.agents/skills/docs-maintenance/: SKILL.md
.agents/skills/framework-dev/: SKILL.md
.agents/skills/framework-usage/: SKILL.md
.agents/skills/plugin-migration/: SKILL.md
.agents/skills/release/: SKILL.md
.agents/skills/testing/: SKILL.md
.agents/skills/testing-design/: SKILL.md
.agents/skills/testing-framework/: SKILL.md
.github/workflows/: pypi-publish.yml  pytest.yml
docs/: README.md  architecture.md
docs/contributing/: README.md
docs/contributing/design_decisions/: 1_architecture.md  2_implementation.md  README.md
docs/contributing/development_setup/: 1_advanced.md  README.md
docs/contributing/module_internals/: 2.plugin_service_modules.md  README.md
docs/guide/: README.md
docs/guide/adapter/: 1_napcat_qq.md  2_bilibili.md  3_github.md  4_mock.md  README.md
docs/guide/api_usage/: 1_messaging.md  2_manage.md  3_query_support.md  README.md
docs/guide/cli/: 1.commands.md  README.md
docs/guide/configuration/: 1.config-security.md  README.md
docs/guide/message-types/: README.md  array.md  basic.md  examples.md  forward.md  media.md  rich.md  sugar.md
docs/meta/: README.md
docs/plugin_system/: UnifiedRegistry-FAQ.md  UnifiedRegistry-README.md  UnifiedRegistry-参数解析.md  UnifiedRegistry-命令系统.md  UnifiedRegistry-实战案例.md  UnifiedRegistry-快速开始.md  UnifiedRegistry-最佳实践.md  UnifiedRegistry-测试指南.md  UnifiedRegistry-过滤器系统.md
docs/reference/: cli.md
docs/testing/: README.md  api-reference.md  best-practice-simple.md  best-practice-unittest.md  guide.md  quick-start.md
examples/: README.md  run_test.py  test_tokenizer.py
examples/01_hello_world/: main.py  manifest.toml
examples/02_event_handling/: main.py  manifest.toml
examples/03_message_types/: main.py  manifest.toml
examples/04_config_and_data/: main.py  manifest.toml
examples/05_bot_api/: main.py  manifest.toml
examples/06_hook_and_filter/: main.py  manifest.toml
examples/07_rbac/: main.py  manifest.toml
examples/08_scheduled_tasks/: main.py  manifest.toml
examples/09_notice_and_request/: main.py  manifest.toml
examples/10_multi_step_dialog/: main.py  manifest.toml
examples/11_group_manager/: main.py  manifest.toml
examples/12_qa_bot/: main.py  manifest.toml
examples/13_scheduled_reporter/: main.py  manifest.toml
examples/14_external_api/: main.py  manifest.toml
examples/15_full_featured_bot/: main.py  manifest.toml
examples/config/: test_config.py
examples/testing/: README.md
examples/tutorial/: poke.py
examples/unified_registry/: README.md  __init__.py  test_readme.py
ncatbot/: __init__.py
ncatbot/adapter/: __init__.py  base.py
ncatbot/api/: __init__.py  _sugar.py  base.py  client.py  interface.py  misc.py  proxy.py
ncatbot/app/: __init__.py  client.py
ncatbot/cli/: main.py
ncatbot/core/: __init__.py  client.py
ncatbot/event/: __init__.py  base.py  message.py
ncatbot/mcp/: MCPconfig.json  config.yaml  main.py  readme.md
ncatbot/plugin/: __init__.py  base.py  compatible_enrollment.py  ncatbot_plugin.py
ncatbot/plugin_system/: __init__.py  base_plugin.py  config.py  decorator.py  deprecated.py  loader.py
ncatbot/service/: manager.py
ncatbot/testing/: conftest_plugin.py  discovery.py  harness.py  plugin_harness.py  scenario.py
ncatbot/types/: __init__.py  enums.py  meta.py
ncatbot/utils/: __init__.py  config.py  error.py  logger.py  network_io.py  prompt.py  status.py  thread_pool.py
ncatbot_legacy/adapter/: base.py
test/cli/: __init__.py  conftest.py  test_config_commands.py  test_info_commands.py  test_main.py  test_plugin_commands.py  test_registry.py  test_system_commands.py
test/e2e/: __init__.py  run.py
test/integration/: __init__.py  conftest.py  run_api_tests.py  test_config_integration_advanced.py  test_config_integration_core.py  test_event_pipeline.py  test_plugin_integration.py  test_service_integration.py  test_startup_flow.py  test_unified_registry_integration.py
test/message_router/: test_message_router.py
test/plugin_system/: test_time_task_errors.py
test_legacy/integration/: conftest.py  test_event_pipeline.py  test_plugin_integration.py
tests/: README.md
tests/e2e/: test_bot_client.py  test_webui_e2e.py
tests/integration/: test_event_pipeline.py  test_plugin_lifecycle.py  test_preview_skeletons.py  test_webui_server.py
tests/unit/: README.md  conftest.py
(+671 files in other folders)
